<resources>
    <string name="app_name">BoardApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_fragment_user_id">아이디</string>
    <string name="login_fragment_user_pw">비밀번호</string>
    <string name="login_fragment_button_login">로그인</string>
    <string name="login_fragment_button_join">회원가입</string>

    <string name="join_fragment_user_id">아이디</string>
    <string name="join_fragment_user_pw">비밀번호</string>
    <string name="join_fragment_user_pw2">비밀번호 확인</string>
    <string name="join_fragment_button_next">다음</string>

    <string name="add_user_info_fragment_nickname">닉네임</string>
    <string name="add_user_info_fragment_done">완료</string>

    <string name="board_main_fragment_board_item">게시판</string>
    <string name="board_main_fragment_all_item">전체게시판</string>
    <string name="board_main_fragment_free_item">자유게시판</string>
    <string name="board_main_fragment_humor_item">유머게시판</string>
    <string name="board_main_fragment_question_item">질문게시판</string>
    <string name="board_main_fragment_sports_item">스포츠게시판</string>
    <string name="board_main_fragment_user_item">사용자</string>
    <string name="board_main_fragment_fix_item">사용자 정보 수정</string>
    <string name="board_main_fragment_logout_item">로그아웃</string>
    <string name="board_main_fragment_signout_item">회원탈퇴</string>
</resources>